# awareness-edge

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  NOTICE  README.md  config.example.yaml  pyproject.toml
.github/workflows/: ci.yml  pr-labels.yml  publish.yml
docs/providers/: demo.md
docs/sinks/: demo.md  github.md
examples/: audit_store.py
src/awareness_edge/: __init__.py  __main__.py  cli.py
src/awareness_edge/core/: __init__.py  client.py  config.py  scheduler.py
src/awareness_edge/evaluator/: __init__.py  base.py  threshold.py
src/awareness_edge/providers/: __init__.py  base.py  demo.py
src/awareness_edge/receivers/: __init__.py  __main__.py  gps.py
src/awareness_edge/sinks/: __init__.py  base.py  demo.py  github.py
tests/: __init__.py  conftest.py  test_audit.py  test_client.py  test_config.py  test_evaluator.py  test_github_sink.py  test_import.py  test_providers.py  test_sinks.py
