[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "awareness-edge"
version = "0.1.0"
description = "Bidirectional polling service — collects system metrics from source MCPs and syncs data to/from mcp-awareness"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Chris Means" },
]
keywords = ["mcp", "awareness", "monitoring", "edge", "bridge"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "httpx>=0.27",
    "mcp[cli]>=1.0.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "click>=8.0",
    "starlette>=0.40",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
]

[project.scripts]
awareness-edge = "awareness_edge.cli:main"

[project.urls]
Homepage = "https://github.com/cmeans/awareness-edge"
Repository = "https://github.com/cmeans/awareness-edge"
Issues = "https://github.com/cmeans/awareness-edge/issues"
Changelog = "https://github.com/cmeans/awareness-edge/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/awareness_edge"]

# --- Ruff ---
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "TCH", "RUF"]

[tool.ruff.format]
quote-style = "double"

# --- Mypy ---
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
packages = ["awareness_edge"]

[[tool.mypy.overrides]]
module = ["httpx.*", "mcp.*"]
ignore_missing_imports = true

# --- Pytest ---
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
